@@ -234,6 +234,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\formats\xml\NewSVGformat.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ShowIncludes="false"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="..\..\src\formats\pngformat.cpp"
 				>
 				<FileConfiguration
@@ -252,6 +264,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\formats\reportformat.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\formats\textformat.cpp"
 				>
 			</File>
 			<File
